fix side scroll issue on mobile

--- a/app/assets/stylesheets/shared/layouts.css.scss
+++ b/app/assets/stylesheets/shared/layouts.css.scss
@@ -13,6 +13,7 @@ body {
   @include flexbox;
   @include flex-direction(column);
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .main-page {
